Deletet Pursuits, Added cors config and title attribute to resume